--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "myap",
   "version": "0.1.0",
+  "homepage": "https://aman1chaudhary.github.io/inventory_management_frontend",
   "private": true,
   "dependencies": {
     "@react-oauth/google": "^0.11.0",
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.0"
+    "@types/leaflet": "^1.9.0",
+    "gh-pages": "^5.0.0"
   }
 }
